init file for Tailwind css

--- a/01_index.html
+++ b/01_index.html
@@ -8,6 +8,41 @@
     <title>Hasibulllah's Personal Site!</title>
 </head>
 <body>
-
+<img src="D:\image-self\Photo\20230418_101049.jpg" width="200px"  height="200" style="border-radius: 50%;padding: 40px 40px 10px 40px">
+<h1>Hasibullah Aman</h1>
+<p>Mern Stack Developer and Machine <a href="www.github.com/hasibullahaman/">Learning Engineer</a></p>
+<p>I am the boy who will be success in any situation! and no one can stop me forever!</p>
+<hr>
+<br>
+<p><strong>Book and Teaching</strong></p>
+<ul>
+    <li>I love the Programming book</li>
+    <li>I love to watch movie when I success</li>
+</ul>
+<h3>Work and Experience</h3>
+<table>
+    <tr>
+    <th>Date</th>
+    <th>Work Title</th>
+    </tr>
+    <tr>
+        <td>
+            2010 - 2014
+        </td>
+        <td>
+            Work as senior engineer in Microsoft
+        </td>
+    </tr>
+    <tr>
+        <td>
+            2015
+        </td>
+        <td>
+            work as Free at Bill Gits Home
+        </td>
+    </tr>
+</table>
+<p><a href="./inter-link.html">My Hobie</a>    <a href="./inter-link.html">Contact Me</a></p>
+<p></p>
 </body>
 </html>
