--- a/TailwindCss/src/pages/index.html
+++ b/TailwindCss/src/pages/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="../../dist/css/tailwind.css">
     <title>Document</title>
 </head>
-<body class="bg-blue-300">
-<p class="text-5xl font-bold text-red-500 ">Hello World!, I come back to web Devopment! </p>
+<body class="bg-gray-500">
+<div class="container h-full bg-gray-100 md:mx-auto px-4">
+    <div class="container bg-red-300 w-25">Hello</div>
+</div>
 </body>
 </html>
